2010-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/peep.c (z80instructionSize): fixed warning
	* support/regression/tests/bug-3117729.c: fixed and enabled for mcs51

2010-12-05 Borut Razem <borut.razem AT siol.net>

	* Makefile.in:
	  fixed bug #312815: Top level Makefile variable is mis-spelled

2010-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3117729.c:
	  Disabled test for mcs51.

2010-11-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3117729.c:
	  Added bug description.

2010-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  support/regression/tests/bug-3117729.c:
	  Fixed #3117729, minor peephole improvements.

2010-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/peep.c:
	  Fixed #3117748, improved fix for #3109557.

2010-11-26 Raphael Neider <rneider AT web.de>

	* src/pic14/glue.c (emitIvals): end retlw instruction with newline,
	  fixes #3119071.

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c,
	  src/SDCCpeeph.c:
	  Fixed #3109557.

2010-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole fix.

2010-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/main.c (_ds390_genIVT, _ds390_genInitStartup): keep flat24 mode
	  off before _sdcc_external_startup is called
	* device/lib/ds390/tinibios.c (_sdcc_external_startup): pop 16 bit address,
	  push 24 bit, don't call anything before the changeover to flat24 mode
	* support/regression/ports/ds390/spec.mk: start uCsim in 16 bit mode

2010-11-07 Borut Razem <borut.razem AT siol.net>

	* Makefile.common.in, sdcc_vc_in.h, sdccconf_in.h, src/pic14/main.c,
	  src/port.h, src/SDCCast.c, src/SDCCmain.c, src/SDCCopt.c,
	  src/SDCCpeeph.c, src/SDCCsymt.c:
	  TARGET_ID_PIC1 renamed to TARGET_ID_PIC14,
	  TARGET_IS_PIC renamed to TARGET_IS_PIC14
	  OPT_DISABLE_PIC renamed to OPT_DISABLE_PIC14